<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventosActivity">

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fecha" />

    <EditText
        android:id="@+id/etObservacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/observacion" />

    <EditText
        android:id="@+id/etLugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lugar" />

    <Spinner
        android:id="@+id/spImportancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/importancia_array" />

    <Button
        android:id="@+id/btnCrearEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_evento_button" />

    <ListView
        android:id="@+id/lvEventos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>